<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TextEncoder</string>
    <string name="inputtext_hint">Input</string>
    <string name="outputtext_hint">Output</string>
    <string name="fromtype_button">From</string>
    <string name="to_text">To</string>
    <string name="copy_button">Copy</string>
    <string name="convert_button">Convert</string>
    <string name="clear_all">Clear All</string>
    <string name="rate_app">Rate App</string>
    <string name="input_prompt">Choose input type</string>
    <string name="target_prompt">Choose target type</string>
    <string name="invalid_input_message">Invalid input format</string>
    <string name="invalid_ascii_message">Value outside ASCII code range (127)</string>
    <string name="equal_types_message">Input / output types are the same</string>
    <string name="market_url">market://details?id=</string>
    <string name="http_url">http://play.google.com/store/apps/details?id=</string>
    <string-array name="array_all">
        <item>ASCII</item>
        <item>Binary</item>
        <item>Decimal</item>
        <item>Hex</item>
        <item>Octal</item>
        <item>Base64</item>
    </string-array>
    <string-array name="array_nob64">
        <item>ASCII</item>
        <item>Binary</item>
        <item>Decimal</item>
        <item>Hex</item>
        <item>Octal</item>
    </string-array>
    <string-array name="array_ascii_only">
        <item>ASCII</item>
    </string-array>
</resources>
